--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         height: 100%;
       }
       body {
+        background-color: #282c34;
         min-height: 100%;
         margin: 0;
         padding: 0;
