--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/addons/p5.sound.min.js"></script>
 
+
     <style type="text/css">
       html {
         height: 100%;
@@ -31,8 +32,8 @@
         right: 0;
       }
       #canvasBorder {
-      background-color: white;
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      /* background-color: white; */
+      /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
       }
     </style>
   </head>
