--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         left: 0;
         right: 0;
       }
-      #canvasBorder {
+      /* #canvasBorder { */
       /* background-color: white; */
       /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
-      }
+      /* } */
     </style>
   </head>
 
