--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <div id="canvasBorder" width="1150" height="1450" >
       <canvas id="p5Canvas"></canvas>
     </div>
-    <script src="rainbowLines.js"></script>
+    <script src="arcLines.js"></script>
   </body>
 </html>
